// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stories/styles/LightSweep Box smoke-test 1`] = `
<div class="_box_mlpwz_21">
  <h1>
    LightSweep
  </h1>
</div>
`;

exports[`stories/styles/LightSweep Text smoke-test 1`] = `
<div class="_text_mlpwz_1">
  <h1>
    LightSweep
  </h1>
</div>
`;
